--- a/src/assets/css/auth.css
+++ b/src/assets/css/auth.css
@@ -6,17 +6,17 @@
 }
 
 .card {
-    box-shadow: 0px 0px 8px 0px rgba(34,34,34,0.16);
+    box-shadow: 0 0 8px 0 rgba(34,34,34,0.16);
     border-radius: 8px;
     width: 408px;
     padding: 20px;
 }
 
-.logo {
+.logo1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 5cm;
+    width: 151px;
 }
 
 .label {
