--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -14,6 +14,10 @@
     margin: 40px;
 }
 
+.dashboard-container {
+    margin: 40px;
+}
+
 .ant-card-head {
     background-color: #3B85FA;
     border-top-left-radius: 8px;
@@ -27,5 +31,8 @@
 .ant-table-thead > tr > th{
     color: #4B4B4B;
     background: #F4F4F4 !important;
-    border: none;
+}
+
+.dashboard-label {
+    color: #62676B;
 }
