--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -18,17 +18,17 @@
     margin: 40px;
 }
 
-.ant-card-head {
+.schedule-card .ant-card-head {
     background-color: #3B85FA;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
 }
 
-.ant-table-tbody > tr >th{
+.schedule-card .ant-table-tbody > tr >th{
     color: #4B4B4B;
 }
 
-.ant-table-thead > tr > th{
+.schedule-card .ant-table-thead > tr > th{
     color: #4B4B4B;
     background: #F4F4F4 !important;
 }
@@ -37,17 +37,17 @@
     color: #62676B;
 }
 
-.schedule-card > .ant-card-head{
+.schedule-card .ant-card-head{
     background-color: #3B85FA;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
 }
 
-.schedule-card > .ant-table-tbody > tr >th{
+.schedule-card .ant-table-tbody > tr >th{
     color: #4B4B4B;
 }
 
-.schedule-card > .ant-table-thead > tr >th{
+.schedule-card .ant-table-thead > tr >th{
     color: #4B4B4B;
     background: #F4F4F4 !important;
 }
