--- a/src/assets/css/layout.css
+++ b/src/assets/css/layout.css
@@ -59,3 +59,17 @@ li {
     float: right;
     margin: 10px 0 auto 0;
 }
+
+/* .container-photo{
+    width: 200px;
+    float: left;
+    margin: 26px 121px 26px 24px;
+}  */
+
+/* img{
+    vertical-align: middle;
+    width: 25%;
+    height: 25%;
+    border-radius:50%;
+    float: left;
+} */
