--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -3,7 +3,7 @@
 }
 
 .dashboard-container {
-    padding: 40px;
+    margin: 32px;
 }
 
 .schedule-card .ant-card-head {
@@ -38,4 +38,11 @@
 .schedule-card .ant-table-thead > tr >th{
     color: #4B4B4B;
     background: #F4F4F4 !important;
+}
+
+.customDatePickerWidth,
+.customDatePickerWidth > div.react-datepicker-wrapper,
+.customDatePickerWidth > div > div.react-datepicker__input-container
+.customDatePickerWidth > div > div.react-datepicker__input-container input {
+    width: 100%;
 }
