--- a/src/assets/css/dashboard.css
+++ b/src/assets/css/dashboard.css
@@ -6,10 +6,14 @@
     margin: 32px;
 }
 
-.schedule-card .ant-card-head {
-    background-color: #3B85FA;
-    border-top-left-radius: 8px;
-    border-top-right-radius: 8px;
+.today-container {
+    margin: 32px;
+}
+
+@media screen and (min-width: 768px) {
+    .today-container {
+        margin: 32px;
+    }
 }
 
 .schedule-card .ant-table-tbody > tr >th{
@@ -26,7 +30,9 @@
 }
 
 .schedule-card .ant-card-head{
-    background-color: #3B85FA;
+    background-image: url('../img/today-order-bg.png');
+    object-fit: cover;
+    height: 100px;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
 }
