--- a/src/assets/css/message.css
+++ b/src/assets/css/message.css
@@ -14,6 +14,6 @@
     margin: 40px;
 }
 
-.hightlight:focus-within {
-    background: #a1c084;
+.hightlight:focus {
+    background-color: #F8F8F8;
 }
